# IDScanner

./: Cargo.toml  DEPLOYMENT.md  EXAMPLES.md  INDEX.md  INVATARE_RUST.md  QUICKSTART.md  README.md  config.example.toml  config.toml  ids-deployment-guide.md  ids_corrected.rs  main_educational_ro.rs  plan.md  rsyslog-safe-config.sh  rsyslog_config.sh  rust_ids_arcsight.rs  test_scan.sh  test_scanner.sh
docs/: EXEMPLE_PRACTICE.md  INDEX.md  README2.md
service/: ids-scanner.service
src/: Cargo.toml  alerter.rs  config.example.toml  config.rs  detector.rs  edu.rs  main.rs  parser.rs  server.rs  test_scanner.sh
