[package]
name = "PDScanner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
lettre = { version = "0.11", features = ["smtp-transport"] }

# Adăugăm acest profil pentru a rezolva eroarea LNK1318 pe Windows
[profile.dev]
debug = 1
