[package]
name = "ids-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1.11"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
dashmap = "6.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
